--- a/billy/nocss/index.html
+++ b/billy/nocss/index.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" href="../icon.webp">
-  <link rel="canonical" href="/billy/nocss/">
+  <link rel="icon" href="/billy/icon.webp">
   <title>billy...</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="description" content="A picture of.... william?">
-  <meta property="og:description" content="A picture of.... william?">
-  <meta name="title" content="billy...">
-  <meta property="og:title" content="billy...">
-  <meta property="og:image" content="../billy.webp">
-  <script>
-    //redirect to https
-    if (window.location.protocol != "https:")
-        window.location.protocol = "https"
-  </script>
+  <meta property="og:title" content="william">
+  <meta property="og:description" content="a picture of BILLY??">
+  <meta property="og:image" content="/billy/billy.webp">
 </head>
 <body>
-     <img src="../billy.webp" width="50%"/>
+  <img src="/billy/billy.webp" width="50%" alt='a picture of a cat named billy.'>
 </body>
 </html>
