--- a/dry/index.html
+++ b/dry/index.html
@@ -1,45 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="preconnect" href="//fonts.googleapis.com">
-  <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
-  <link href="//fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
-  <link rel="icon" href="icon.webp">
-  <link rel="canonical" href="https://soggy.cat/dry/">
-  <link rel="stylesheet" href="/static/main.css">
   <title>dry?? cat</title>
-  <meta charset="utf-8">
+  <link rel="icon" href="/dry/icon.webp">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="robots" content="index, follow">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="description" content="A picture of a dry cat named Shark.">
-  <meta property="og:description" content="A picture of a dry cat named Shark.">
+  <meta charset="utf-8">
+
   <meta name="title" content="dry?? cat">
   <meta property="og:title" content="dry?? cat">
+
+  <meta name="description" content="a picture of a dry cat inside a bathtub.">
+  <meta property="og:description" content="a picture of a dry cat inside a bathtub.">
+
   <meta property="og:image" content="/dry/dry.webp">
+  <link rel="stylesheet" href="/static/main.css">
 </head>
+<body>
+     <!-- don't be fooled, he's not actually soggy here -->
+     <img id="soggycat" src="dry.webp" data-tilt data-tilt-scale="1.06" />
 
-<body data-soggy-pagetype="vtilt-js">
-  <img id="soggycat" src="dry.webp" data-tilt data-tilt-scale="1.06" />
+   <div id="sidemenu">
+   <a href="/github" class="menubuttonsa">
+     <div class="menubuttons"><img src='/img/code.svg'/>code</div></a>
 
-  <div id="sidemenu">
-    <a href="/github" class="menubuttonsa">
-      <div class="menubuttons"><img src='/img/code.svg'/>code</div></a>
-      
-    <a href="nocss" class="menubuttonsa">
-      <div class="menubuttons small"><img src='/img/nocss.svg'/>no css</div></a>
-      
-    <a href="#" class="menubuttonsa"
+   <a href="/dry/nocss" class="menubuttonsa">
+     <div class="menubuttons small"><img src='/img/nocss.svg'/>no css</div></a>
+
+   <a href="#" class="menubuttonsa"
       onclick="document.getElementById('picker').click(); return false;">
-      <div class="menubuttons small"><img src='/img/upload.svg'/>upload</div></a>
-    </div>
-  
-    <button id="circlebtn"></button>
-    <span id='player' style='display: none'></span>
-    <input type="file" id="picker" style="display: none" accept="image/*" />  
+     <div class="menubuttons small"><img src='/img/upload.svg'/>upload</div></a>
+   </div>
 
-  <script src='/static/vanillatilt.js'></script>
-  <script src='/static/main.js'></script>
-  <script src="/static/color-thief.umd.js"></script>
+   <button id="circlebtn"></button>
+   <span id='player' style='display: none'></span>
+   <input type="file" id="picker" style="display: none" accept="image/*" />
+  
+     	<script src='/static/main.js'></script>
 </body>
 </html>
