--- a/goog/index.html
+++ b/goog/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta name="referrer" content="always">
-	<link rel="preconnect" href="//fonts.googleapis.com">
-	<link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
-	<link href="//fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
-	<link rel="icon" href="./img/goog.webp">
-	<link rel="canonical" href="https://goog.soggy.cat/">
-	<link rel="stylesheet" href="//soggy.cat/static/main.css">
-	<link rel="stylesheet" href="goog.css">
 	<title>Goog...</title>
-	<meta charset="utf-8">
+	<link rel="icon" href="/goog/img/goog.webp">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="robots" content="index, follow">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta charset="utf-8">
+
+	<meta name="title" content="Goog...">
+	<meta property="og:title" content="Goog...">
+
 	<meta name="description" content="Goog...">
 	<meta property="og:description" content="Goog...">
-	<meta name="title" content="soggy cat">
-	<meta property="og:title" content="Goog...">
-	<meta property="og:image" content="/img/goog.webp">
+
+	<meta property="og:image" content="/img/soggycat.webp">
+	<link rel="stylesheet" href="/static/main.css">
+	<style>body{background: linear-gradient(rgb(0, 0, 0) 0%, rgb(42, 73, 77) 70%, rgb(64,115,106) 100%)}; #googtainer{filter: drop-shadow(15px 17px 26px rgb(41, 41, 41,0.6))}</style>
 </head>
 <body data-soggy-pagetype="three-js">
   <script type="importmap">
