--- a/goog/nocss/index.html
+++ b/goog/nocss/index.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" href="../img/goog.webp">
-  <link rel="canonical" href="https://goog.soggy.cat/nocss/">
+  <link rel="icon" href="/goog/img/goog.webp">
   <title>Goog...</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="description" content="Goog...">
+  <meta property="og:title" content="Goog...">
   <meta property="og:description" content="Goog...">
-  <meta name="title" content="Goog...">
-  <meta property="og:title" content="Goog..">
-  <meta property="og:image" content="../img/goog.webp">
-  <script>
-    //redirect to httpGoog...
-    if (window.location.protocol != "https:")
-        window.location.protocol = "https"
-  </script>
+  <meta property="og:image" content="/goog/img/goog.webp">
 </head>
 <body>
-     <img style="height:auto;width:50%;" src="../img/goog.webp"/>
+  <img src="/goog/img/goog.webp" width="50%" alt='a picture of a cat named shark with the caption "Goog...".'>
 </body>
 </html>
