--- a/nocss/index.html
+++ b/nocss/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US" dir="ltr">
 <head>
+  <link rel="icon" href="/favicon.ico">
   <title>soggy cat</title>
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
