--- a/video/index.html
+++ b/video/index.html
@@ -4,5 +4,5 @@
       <meta property="og:video:url" content="//cdn.discordapp.com/attachments/817456773996740670/1141463661601358006/b9DHTLU.mp4">
       <meta property="og:video:height" content="972">
       <meta property="og:video:width" content="718">
-      <meta http-equiv="refresh" content="0; url='//twitter.com/cvsilly_'"/>
+      <meta http-equiv="refresh" content="0; url='/'"/>
 </head>
