--- a/wii/dry/index.html
+++ b/wii/dry/index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" href="icon.jpg">
-  <link rel="canonical" href="/wii/dry/">
-  <title>dry?? cat??? on da wii????</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/wii/dry/icon.jpg">
+  <title>dry??? cat??? on da wii????</title>
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="description" content="Alternative to soggy.cat/dry/nocss. Supports the wii's web browser by using JPEG.">
-  <meta property="og:description" content="Alternative to soggy.cat/dry/nocss. Supports the wii's web browser by using JPEG.">
-  <meta name="title" content="dry?? cat??? on da wii????">
-  <meta property="og:title" content="dry?? cat??? on da wii????">
-  <meta property="og:image" content="dry.jpg">
+  <meta property="og:title" content="dry??? cat??? on da wii????">
+  <meta property="og:description" content="alternative to soggy.cat/dry/nocss. supports the wii's web browser by using JPEG.">
+  <meta property="og:image" content="/wii/dry/dry.jpg">
 </head>
 <body>
      <img style="height:auto;width:50%;" src="dry.jpg"/>
