--- a/wii/index.html
+++ b/wii/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" href="icon.jpg">
-  <link rel="canonical" href="/wii/">
+  <link rel="icon" href="/wii/icon.jpg">
   <title>soggy wii</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="description" content="Alternative to soggy.cat/nocss, Supports the wii's web browser by using JPEG.">
-  <meta property="og:description" content="Alternative to soggy.cat/nocss. Supports the wii's web browser by using JPEG.">
-  <meta name="title" content="soggy wii">
   <meta property="og:title" content="soggy wii">
-  <meta property="og:image" content="sog.jpg">
+  <meta property="og:description" content="alternative to soggy.cat/nocss. supports the wii's web browser by using JPEG.">
+  <meta property="og:image" content="/img/soggycat.webp">
 </head>
 <body>
-     <img style="height:auto;width:40%;" src="sog.jpg"/>
+  <img src="sog.jpg" width="50%" alt="a picture of a wet cat inside a bathtub.">
 </body>
 </html>
