--- a/dry/nocss/index.html
+++ b/dry/nocss/index.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US" dir="ltr">
 <head>
-  <link rel="icon" href="../icon.webp">
-  <link rel="canonical" href="/dry/nocss/">
+  <link rel="icon" href="/dry/icon.webp">
   <title>dry?? cat</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="description" content="A picture of a dry cat named Shark.">
-  <meta property="og:description" content="A picture of a dry cat named Shark.">
-  <meta name="title" content="dry?? cat">
   <meta property="og:title" content="dry?? cat">
-  <meta property="og:image" content="../dry.webp">
-  <script>
-    //redirect to https
-    if (window.location.protocol != "https:")
-        window.location.protocol = "https"
-  </script>
+  <meta property="og:description" content="a picture of a dry cat inside a bathtub.">
+  <meta property="og:image" content="/img/soggycat.webp">
 </head>
-<body>
-     <img style="height:auto;width:50%;" src="../dry.webp"/>
+<body role="main">
+    <img src="/dry/dry.webp" width="50%" alt="a picture of a dry cat inside a bathtub.">
 </body>
 </html>
