--- a/free/index.html
+++ b/free/index.html
@@ -1,5 +1,1 @@
-<html>
-  <head>
-    <meta http-equiv="refresh" content="0; url='//twitter.com/sogful/status/1687887989211299840'" />
-  </head>
-</html>
+<html><head><meta http-equiv="refresh" content="0; url='//twitter.com/sogful/status/1687887989211299840'" /></head></html>
