--- a/search/index.html
+++ b/search/index.html
@@ -1,35 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="preconnect" href="//fonts.googleapis.com">
-  <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
-  <link href="//fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
-  <link rel="icon" href="/img/icon.webp">
-  <link rel="canonical" href="./">
-  <link rel="stylesheet" href="/static/main.css">
+
   <title>soggy cat</title>
-  <meta charset="utf-8">
+  <link rel="icon" href="/favicon.ico">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="robots" content="index, follow">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="description" content="A picture of a wet cat inside a bathtub.">
-  <meta property="og:description" content="A picture of a wet cat inside a bathtub.">
+  <meta charset="utf-8">
+
   <meta name="title" content="soggy cat">
   <meta property="og:title" content="soggy cat">
+  
+  <meta name="description" content="a picture of a wet cat inside a bathtub.">
+  <meta property="og:description" content="a picture of a wet cat inside a bathtub.">
+  
   <meta property="og:image" content="/img/soggycat.webp">
+  <link rel="stylesheet" href="/static/main.css">
+  
 </head>
 <body>
+
+<body>
      <script async src="https://cse.google.com/cse.js?cx=b26ceb7e0f04a405f">
-     </script>
-     <div class="gcse-search" style=""></div>
+     </script><div class="gcse-search"></div>
+
      <img id="soggycat" src="https://soggy.cat/img/soggycat.webp" data-tilt data-tilt-scale="1.06" />
-     <div id="sidemenu">
-     <a href="/github/" class="menubuttonsa"><div class="menubuttons"><img src='/img/code.svg'/>GitHub</div></a>
-     <a href="/nocss/" class="menubuttonsa"><div class="menubuttons"><img src='/img/nocss.svg'/>No CSS</div></a>
-     </div>
-     <button id="circlebtn"></button>
-     <script src='/static/vanillatilt.js'></script>
+  
+   <div id="sidemenu">
+   <a href="/github" class="menubuttonsa">
+     <div class="menubuttons"><img src='/img/code.svg'/>code</div></a>
+
+   <a href="/nocss" class="menubuttonsa">
+     <div class="menubuttons small"><img src='/img/nocss.svg'/>no css</div></a>
+
+   <a href="#" class="menubuttonsa"
+      onclick="document.getElementById('picker').click(); return false;">
+     <div class="menubuttons small"><img src='/img/upload.svg'/>upload</div></a>
+   </div>
+
+   <button id="circlebtn"></button>
+   <span id='player' style='display: none'></span>
+   <input type="file" id="picker" style="display: none" accept="image/*" />
      <script src='/static/main.js'></script>
-     <span id='player' style='display:none'></span>
 </body>
 </html>
