--- a/wii/billy/index.html
+++ b/wii/billy/index.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" href="icon.jpg">
-  <link rel="canonical" href="/billy/nocss/">
-  <title>billy...</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/wii/billy/icon.jpg">
+  <title>billy... wii edition</title>
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="description" content="A picture of.... william?">
-  <meta property="og:description" content="A picture of.... william?">
-  <meta name="title" content="billy...">
-  <meta property="og:title" content="billy...">
-  <meta property="og:image" content="billy.jpg">
-  <script>
-    //redirect to https
-    if (window.location.protocol != "https:")
-        window.location.protocol = "https"
-  </script>
+  <meta property="og:title" content="william">
+  <meta property="og:description" content="alternative to soggy.cat/billy/nocss. supports the wii's web browser by using JPEG.">
+  <meta property="og:image" content="/wii/billy/billy.jpg">
 </head>
 <body>
-     <img style="height:auto;width:40%;" src="billy.jpg"/>
+  <img src="billy.jpg" width="50%" alt="a picture of a cat named billy.">
 </body>
 </html>
