fix some of everything (i think?)

--- a/billy/index.html
+++ b/billy/index.html
@@ -15,17 +15,17 @@
 
   <meta property="og:image" content="/billy/billy.webp">
   <link rel="stylesheet" href="/static/main.css">
-  <style>body{background:radial-gradient(circle,rgb(28,15,7) 20%,rgb(198,177,146) 100%); !important}</style>
-  
+  <link rel="stylesheet" href="billy.css">
+
 </head>
-<body>
+<body data-soggy-pagetype="vtilt-js">
      <img id="soggycat" src="billy.webp" data-tilt data-tilt-scale="1.06" />
 
    <div id="sidemenu">
    <a href="/github" class="menubuttonsa">
      <div class="menubuttons"><img src='/img/code.svg'/>code</div></a>
 
-   <a href="/billy/nocss" class="menubuttonsa">
+   <a href="nocss" class="menubuttonsa">
      <div class="menubuttons small"><img src='/img/nocss.svg'/>no css</div></a>
 
    <a href="#" class="menubuttonsa"
