--- a/goog/index.html
+++ b/goog/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>Goog...</title>
-	<link rel="icon" href="/goog/img/goog.webp">
+	<link rel="icon" href="img/goog.webp">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
@@ -13,9 +13,12 @@
 	<meta name="description" content="Goog...">
 	<meta property="og:description" content="Goog...">
 
-	<meta property="og:image" content="/img/soggycat.webp">
-	<link rel="stylesheet" href="/static/main.css">
-	<style>body{background: linear-gradient(rgb(0, 0, 0) 0%, rgb(42, 73, 77) 70%, rgb(64,115,106) 100%)}; #googtainer{filter: drop-shadow(15px 17px 26px rgb(41, 41, 41,0.6))}</style>
+	<meta property="og:image" content="img/goog.webp">
+	<link rel="stylesheet" href="//soggy.cat/static/main.css">
+	<!-- links starting with "/" lead to goog.soggy.cat and not soggy.cat -->
+
+	<link rel="stylesheet" href="goog.css">
+
 </head>
 <body data-soggy-pagetype="three-js">
   <script type="importmap">
