--- a/team/index.html
+++ b/team/index.html
@@ -15,7 +15,7 @@
     
     <link href="style.css?ver=3" rel="stylesheet" type="text/css"/>
     <script src="script.js"></script>
-    <script src="https://unpkg.com/cursor-effects@latest/dist/browser.js"></script>
+    <script src="cursor-effects.js"></script>
     
   </head>
   <body scroll="no" style="overflow: hidden; margin: 0px; padding: 0px;">
