--- a/billy/index.html
+++ b/billy/index.html
@@ -19,24 +19,26 @@
 
 </head>
 <body data-soggy-pagetype="vtilt-js">
-     <img id="soggycat" src="billy.webp" data-tilt data-tilt-scale="1.06" />
+    <img id="soggycat" src="billy.webp" data-tilt data-tilt-scale="1.06" />
 
-   <div id="sidemenu">
-   <a href="/github" class="menubuttonsa">
-     <div class="menubuttons"><img src='/img/code.svg'/>code</div></a>
+    <div id="sidemenu">
+    <a href="/github" class="menubuttonsa">
+      <div class="menubuttons"><img src='/img/code.svg'/>code</div></a>
 
-   <a href="nocss" class="menubuttonsa">
-     <div class="menubuttons small"><img src='/img/nocss.svg'/>no css</div></a>
+    <a href="nocss" class="menubuttonsa">
+      <div class="menubuttons small"><img src='/img/nocss.svg'/>no css</div></a>
 
-   <a href="#" class="menubuttonsa"
-      onclick="document.getElementById('picker').click(); return false;">
-     <div class="menubuttons small"><img src='/img/upload.svg'/>upload</div></a>
-   </div>
+    <a href="#" class="menubuttonsa"
+        onclick="document.getElementById('picker').click(); return false;">
+      <div class="menubuttons small"><img src='/img/upload.svg'/>upload</div></a>
+    </div>
 
-   <button id="circlebtn"></button>
-   <span id='player' style='display: none'></span>
-   <input type="file" id="picker" style="display: none" accept="image/*" />
-  
-     	<script src='/static/main.js'></script>
+    <button id="circlebtn"></button>
+    <span id='player' style='display: none'></span>
+    <input type="file" id="picker" style="display: none" accept="image/*" />
+    
+    <script src='/static/vanillatilt.js'></script>
+    <script src="/static/main.js"></script>
+    <script src="/static/color-thief.umd.js"></script>
 </body>
 </html>
