--- a/billy/index.html
+++ b/billy/index.html
@@ -1,44 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>billy...</title>
-  <link rel="icon" href="/billy/icon.webp">
+	<title>billy...</title>
+	<link rel="icon" href="/billy/icon.webp">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
 
-  <meta name="title" content="william">
-  <meta property="og:title" content="william">
+	<meta name="title" content="william">
+	<meta property="og:title" content="william">
 
-  <meta name="description" content="a picture of BILLY??">
-  <meta property="og:description" content="a picture of BILLY??">
+	<meta name="description" content="a picture of BILLY??">
+	<meta property="og:description" content="a picture of BILLY??">
 
-  <meta property="og:image" content="/billy/billy.webp">
-  <link rel="stylesheet" href="/static/main.css">
-  <link rel="stylesheet" href="billy.css">
-
+	<meta property="og:image" content="/billy/billy.webp">
+	<link rel="stylesheet" href="/static/main.css">
+	<link rel="stylesheet" href="billy.css">
 </head>
+
 <body data-soggy-pagetype="vtilt-js">
     <img id="soggycat" src="billy.webp" data-tilt data-tilt-scale="1.06" />
 
-    <div id="sidemenu">
-    <a href="/github" class="menubuttonsa">
-      <div class="menubuttons"><img src='/img/code.svg'/>code</div></a>
+	<div id="sidemenu">
+		<a href="/github" class="menubuttonsa">
+			<div class="menubuttons">
+				<img src='/img/code.svg'>
+				<p>code</p>
+			</div>
+		</a>
 
-    <a href="nocss" class="menubuttonsa">
-      <div class="menubuttons small"><img src='/img/nocss.svg'/>no css</div></a>
+		<a href="nocss" class="menubuttonsa">
+			<div class="menubuttons small">
+				<img src='/img/nocss.svg'>
+				<p>no css</p>
+			</div>
+		</a>
 
-    <a href="#" class="menubuttonsa"
-        onclick="document.getElementById('picker').click(); return false;">
-      <div class="menubuttons small"><img src='/img/upload.svg'/>upload</div></a>
-    </div>
+		<a href="#" class="menubuttonsa"
+			onclick="document.getElementById('picker').click(); return false;">
+			<div class="menubuttons small">
+				<img src='/img/upload.svg'>
+				<p>upload</p>
+			</div>
+		</a>
+	</div>
 
     <button id="circlebtn"></button>
     <span id='player' style='display: none'></span>
     <input type="file" id="picker" style="display: none" accept="image/*" />
-    
-    <script src='/static/vanillatilt.js'></script>
-    <script src="/static/main.js"></script>
-    <script src="/static/color-thief.umd.js"></script>
+
+	<script src="/static/main.js"></script>
+	
+	<script src='/static/vanillatilt.js'></script>
+	<script src="/static/color-thief.umd.js"></script>
 </body>
 </html>
