--- a/search/index.html
+++ b/search/index.html
@@ -1,46 +1,59 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>soggy cat</title>
+	<link rel="icon" href="/favicon.ico">
 
-  <title>soggy cat</title>
-  <link rel="icon" href="/favicon.ico">
-  
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
 
-  <meta name="title" content="soggy cat">
-  <meta property="og:title" content="soggy cat">
-  
-  <meta name="description" content="a picture of a wet cat inside a bathtub.">
-  <meta property="og:description" content="a picture of a wet cat inside a bathtub.">
-  
-  <meta property="og:image" content="/img/soggycat.webp">
-  <link rel="stylesheet" href="/static/main.css">
-  
+	<meta name="title" content="soggy cat">
+	<meta property="og:title" content="soggy cat">
+
+	<meta name="description" content="a picture of a wet cat inside a bathtub.">
+	<meta property="og:description" content="a picture of a wet cat inside a bathtub.">
+
+	<meta property="og:image" content="/img/soggycat.webp">
+	<link rel="stylesheet" href="/static/main.css">
 </head>
-<body>
 
-<body>
-     <script async src="https://cse.google.com/cse.js?cx=b26ceb7e0f04a405f">
-     </script><div class="gcse-search"></div>
+<body data-soggy-pagetype="vtilt-js">
+	<script async src="https://cse.google.com/cse.js?cx=b26ceb7e0f04a405f">
+	</script><div class="gcse-search"></div>
 
-     <img id="soggycat" src="https://soggy.cat/img/soggycat.webp" data-tilt data-tilt-scale="1.06" />
-  
-   <div id="sidemenu">
-   <a href="/github" class="menubuttonsa">
-     <div class="menubuttons"><img src='/img/code.svg'/>code</div></a>
+	<img id="soggycat" src="https://soggy.cat/img/soggycat.webp" data-tilt data-tilt-scale="1.06" />
 
-   <a href="/nocss" class="menubuttonsa">
-     <div class="menubuttons small"><img src='/img/nocss.svg'/>no css</div></a>
+	<div id="sidemenu">
+		<a href="/github" class="menubuttonsa">
+			<div class="menubuttons">
+				<img src='/img/code.svg'>
+				<p>code</p>
+			</div>
+		</a>
 
-   <a href="#" class="menubuttonsa"
-      onclick="document.getElementById('picker').click(); return false;">
-     <div class="menubuttons small"><img src='/img/upload.svg'/>upload</div></a>
-   </div>
+		<a href="nocss" class="menubuttonsa">
+			<div class="menubuttons small">
+				<img src='/img/nocss.svg'>
+				<p>no css</p>
+			</div>
+		</a>
 
-   <button id="circlebtn"></button>
-   <span id='player' style='display: none'></span>
-   <input type="file" id="picker" style="display: none" accept="image/*" />
-     <script src='/static/main.js'></script>
+		<a href="#" class="menubuttonsa"
+			onclick="document.getElementById('picker').click(); return false;">
+			<div class="menubuttons small">
+				<img src='/img/upload.svg'>
+				<p>upload</p>
+			</div>
+		</a>
+	</div>
+
+	<button id="circlebtn"></button>
+	<span id='player' style='display: none'></span>
+	<input type="file" id="picker" style="display: none" accept="image/*" />
+
+	<script src="/static/main.js"></script>
+	
+	<script src='/static/vanillatilt.js'></script>
+	<script src="/static/color-thief.umd.js"></script>
 </body>
 </html>
