is this how you use contributions.md????

--- a/billy/index.html
+++ b/billy/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body data-soggy-pagetype="vtilt-js">
-    <img id="soggycat" src="billy.webp" data-tilt data-tilt-scale="1.06" />
+    <img id="soggycat" src="billy.webp" data-tilt data-tilt-scale="1.05" alt="a picture of BILLY??">
 
 	<div id="sidemenu">
 		<a href="/github" class="menubuttonsa">
