--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body data-soggy-pagetype="vtilt-js">
-	<img id="soggycat" src="/img/soggycat.webp" data-tilt data-tilt-scale="1.05" alt="a picture of a wet cat inside a bathtub." />
+	<img id="soggycat" src="/img/soggycat.webp" data-tilt data-tilt-scale="1.05" alt="a picture of a wet cat inside a bathtub.">
 
 	<div id="sidemenu">
 		<a href="/github" class="menubuttonsa">
