the internal motto at ssoggycat is "move slow break stuff" because we are all incompetent
this should move all the static stuff to soggy.cat and also merges all three.jersions of three.js into the ultimate 3D js library known as nine.js, which will now let us perceive into the 9th dimension

--- a/billy/index.html
+++ b/billy/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:description" content="a picture of BILLY??">
 
 	<meta property="og:image" content="/billy/billy.webp">
-	<link rel="stylesheet" href="/static/main.css">
+	<link rel="stylesheet" href="/static/soggycat/main.css">
 	<link rel="stylesheet" href="billy.css">
 </head>
 
@@ -49,9 +49,9 @@
     <span id='player' style='display: none'></span>
     <input type="file" id="picker" style="display: none" accept="image/*" />
 
-	<script src="/static/main.js"></script>
+	<script src="/static/soggycat/main.js"></script>
 	
-	<script src='/static/vanillatilt.js'></script>
-	<script src="/static/color-thief.umd.js"></script>
+	<script src='/static/other/vanillatilt.js'></script>
+	<script src="/static/other/color-thief.umd.js"></script>
 </body>
 </html>
