--- a/goog/index.html
+++ b/goog/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:description" content="Goog...">
 
 	<meta property="og:image" content="img/goog.webp">
-	<link rel="stylesheet" href="//soggy.cat/static/main.css">
+	<link rel="stylesheet" href="//soggy.cat/static/soggycat/main.css">
 	<!-- links starting with "/" lead to goog.soggy.cat and not soggy.cat -->
 
 	<link rel="stylesheet" href="goog.css">
@@ -24,10 +24,10 @@
 	<script type="importmap">
 		{
 			"imports": {
-				"three": "./threejs/three.module.js",
-				"GLTFLoader": "./threejs/addons/GLTFLoader.js",
-				"DRACOLoader": "./threejs/addons/DRACOLoader.js",
-				"OrbitControls": "./threejs/addons/OrbitControls.js"
+				"three": "//soggy.cat/static/threejs/three.module.js",
+				"GLTFLoader": "//soggy.cat/static/threejs/addons/GLTFLoader.js",
+				"DRACOLoader": "//soggy.cat/static/threejs/addons/DRACOLoader.js",
+				"OrbitControls": "//soggy.cat/static/threejs/addons/OrbitControls.js"
 			}
 		}
 	</script> 
@@ -63,6 +63,6 @@
 	<span id='player' style='display: none'></span>
 	<input type="file" id="picker" style="display: none" accept="image/*" />
 
-	<script src='//soggy.cat/static/main.js'></script>
+	<script src='//soggy.cat/static/soggycat/main.js'></script>
 </body>
 </html>
