--- a/team/index.html
+++ b/team/index.html
@@ -13,9 +13,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="theme-color" content="#64DAFF"/>
 	
-	<link href="style.css?ver=3" rel="stylesheet" type="text/css"/>
-	<script src="script.js"></script>
-	<script src="cursor-effects.js"></script>
+	<link rel="stylesheet" href="main.css" type="text/css"/>
+	<script src="main.js"></script>
+	<script src="//soggy.cat/static/other/cursor-effects.js"></script>
 	
   </head>
   <body scroll="no" style="overflow: hidden; margin: 0px; padding: 0px;">
@@ -42,7 +42,7 @@
 		new emojiCursor({ emoji: ["💦","💧","☔","🛁"," "," "," "," "," "," "," "," "] });
 	</script>
 
-	<div class="slideshow" onclick="window.open('dark')">
+	<div class="slideshow" onclick="window.open('dark', 'darkWindow')">
 
 		<div class="image fade">
 		<img width="100px" src="assets/images/slide1.webp">
@@ -73,7 +73,7 @@
 		<div class="twt">
 
 			<!--
-			<div class="info" onclick="window.open('//twitter.com/_ktg5')">
+			<div class="info" onclick="window.open('//twitter.com/_ktg5', '_ktg5')">
 				<img class="pfp" src="//unavatar.io/twitter/_ktg5">
 				<br>
 				<a class="name">ktg5</a>
@@ -82,7 +82,7 @@
 			</div>
 			<br>
 
-			<div class="info" onclick="window.open('//twitter.com/friendlypaths_')">
+			<div class="info" onclick="window.open('//twitter.com/friendlypaths_', 'friendlypaths_')">
 				<img class="pfp" src="//unavatar.io/twitter/friendlypaths_">
 				<br>
 				<a class="name">friendlypaths</a>
@@ -92,7 +92,7 @@
 			<br>
 			-->
 
-			<div class="info" onclick="window.open('//twitter.com/cvsilly_')">
+			<div class="info" onclick="window.open('//twitter.com/cvsilly_', 'cvsilly_')">
 				<img class="pfp" src="assets/images/cv.png">
 				<br>
 				<a class="name">cv</a>
@@ -101,7 +101,7 @@
 			</div>
 			<br>
 
-			<div class="info" onclick="window.open('//twitter.com/sho_buh')">
+			<div class="info" onclick="window.open('//twitter.com/sho_buh', 'sho_buh')">
 				<img class="pfp" src="assets/images/shobe.jpg">
 				<br>
 				<a class="name">shobe</a>
@@ -118,7 +118,7 @@
 		
 		<div class="twt">
 
-			<div class="info" onclick="window.open('//twitter.com/soggyenthusiast')">
+			<div class="info" onclick="window.open('//twitter.com/soggyenthusiast', 'soggyenthusiast')">
 				<img class="pfp" src="assets/images/mat.jpg">
 				<br>
 				<a class="name">Soggy cat enthusiast</a>
@@ -127,7 +127,7 @@
 			</div>
 			<br>
 			
-			<div class="info" onclick="window.open('//twitter.com/coachfancy')">
+			<div class="info" onclick="window.open('//twitter.com/coachfancy', 'coachfancy')">
 				<img class="pfp" src="assets/images/fancycoach.jpg">
 				<br>
 				<a class="name">Soggy Cat Enjoyer Enjoyer</a>
@@ -136,7 +136,7 @@
 			</div>
 			<br>
 			
-			<div class="info" onclick="window.open('//twitter.com/nullcultured')">
+			<div class="info" onclick="window.open('//twitter.com/nullcultured', 'nullcultured')">
 				<img class="pfp" src="assets/images/goob.jpg">
 				<br>
 				<a class="name">goob</a>
@@ -192,6 +192,6 @@
 		</div>
 	</div>
 
-	<script src="/static/neko.js"></script>
+	<script src="//soggy.cat/static/other/neko.js"></script>
 	</body>
 </html>
