--- a/dry/index.html
+++ b/dry/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:description" content="a picture of a dry cat inside a bathtub.">
 
 	<meta property="og:image" content="/dry/dry.webp">
-	<link rel="stylesheet" href="/static/main.css">
+	<link rel="stylesheet" href="/static/soggycat/main.css">
 </head>
 
 <body data-soggy-pagetype="vtilt-js">
@@ -49,9 +49,9 @@
 	<span id='player' style='display: none'></span>
 	<input type="file" id="picker" style="display: none" accept="image/*" />
 
-	<script src='/static/main.js'></script>
+	<script src='/static/soggycat/main.js'></script>
 
-	<script src='/static/vanillatilt.js'></script>
-	<script src="/static/color-thief.umd.js"></script>
+	<script src='/static/other/vanillatilt.js'></script>
+	<script src="/static/other/color-thief.umd.js"></script>
 </body>
 </html>
