--- a/invite/index.html
+++ b/invite/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 
-	<link rel="stylesheet" href="/static/main.css">
+	<link rel="stylesheet" href="/static/soggycat/main.css">
 	<link rel="stylesheet" href="invite.css">
 </head>
 
@@ -53,6 +53,6 @@
 	<span id='player' style='display: none'></span>
 	<input type="file" id="picker" style="display: none" accept="image/*" />
 
-	<script src='/static/main.js'></script>
+	<script src='/static/soggycat/main.js'></script>
 </body>
 </html>
