--- a/gallery/index.html
+++ b/gallery/index.html
@@ -11,11 +11,11 @@
 		{
 			"imports": {
 				"debug": "./debug.js",
-				"three": "./threejs/three.module.js",
-				"GLTFLoader": "./threejs/addons/GLTFLoader.js",
-				"DRACOLoader": "./threejs/addons/DRACOLoader.js",
-				"FirstPersonControls": "./threejs/addons/FirstPersonControls.js",
-				"PointerLockControls": "./threejs/addons/PointerLockControls.js",
+				"three": "/static/threejs/three.module.js",
+				"GLTFLoader": "/static/threejs/addons/GLTFLoader.js",
+				"DRACOLoader": "/static/threejs/addons/DRACOLoader.js",
+				"FirstPersonControls": "/static/threejs/addons/FirstPersonControls.js",
+				"PointerLockControls": "/static/threejs/addons/PointerLockControls.js",
 				"StandardControls": "./shared/StandardControls.js"
 			}
 		}
