--- a/invite/index.html
+++ b/invite/index.html
@@ -15,9 +15,9 @@
 	<script type="importmap">
 		{
 			"imports": {
-				"three": "./threejs/three.module.js",
-				"GLTFLoader": "./threejs/addons/GLTFLoader.js",
-				"EXRLoader": "./threejs/addons/EXRLoader.js"
+				"three": "/static/threejs/three.module.js",
+				"GLTFLoader": "/static/threejs/addons/GLTFLoader.js",
+				"EXRLoader": "/static/threejs/addons/EXRLoader.js"
 			}
 		}
 	</script> 
