fix pass 2 on team/

--- a/team/index.html
+++ b/team/index.html
@@ -13,8 +13,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="theme-color" content="#64DAFF"/>
 	
-	<link rel="stylesheet" href="main.css" type="text/css"/>
-	<script src="main.js"></script>
+	<link rel="stylesheet" href="index.css" type="text/css"/>
+	<script src="index.js"></script>
 	<script src="//soggy.cat/static/other/cursor-effects.js"></script>
 	
   </head>
@@ -35,8 +35,7 @@
 	<div id="stars2"></div>
 	<div id="stars3"></div>
 	
-	<script type="module">
-		import { emojiCursor } from "//unpkg.com/cursor-effects@latest/dist/esm.js";
+	<script>
 		new emojiCursor({ emoji: ["🐱", "🐈", "😸", "😹", "😺", "😻", "😼", "😽", "😾", "🙀", "😿","💦","💧","☔","🛁"] });
 		new emojiCursor({ emoji: ["🐈"," "] });
 		new emojiCursor({ emoji: ["💦","💧","☔","🛁"," "," "," "," "," "," "," "," "] });
