one last thing before cleaning up

--- a/team/index.html
+++ b/team/index.html
@@ -43,7 +43,7 @@
 		new emojiCursor({ emoji: ["💦","💧","☔","🛁"," "," "," "," "," "," "," "," "] });
 	</script>
 
-	<div class="slideshow" onclick="window.open('dark', 'darkWindow')">
+	<div class="slideshow" onclick="window.location.replace('dark')">
 
 		<div class="image fade">
 			<img width="100px" src="assets/images/slide1.webp">
