--- a/2024election/index.html
+++ b/2024election/index.html
@@ -8,13 +8,13 @@
       <meta property="og:title" content="VOTE NOW" />
       <meta name="description" content="You've been tasked with saving an oddly small sopping wet cat from drowning in a bathtub. Would you have enough kindness to save it from its demise?" />
 
-      <link rel="icon" href="https://s.soggy.cat/assets/images/soggymask.webp" />
+      <link rel="icon" href="/team/assets/images/soggymask.webp" />
 
       <meta name="twitter:card" content="summary"/>
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="theme-color" content="#64DAFF"/>
 
-      <link href="style.css?ver=3" rel="stylesheet" type="text/css"/>
+      <link href="style.css" rel="stylesheet" type="text/css"/>
       <script src="script.js"></script>
 
     </head>
@@ -23,11 +23,11 @@
    
   <div class="result">
     <label class="option-01">
-      <span class="one" onclick="window.open('https://soggy.cat/2024election/assets/awesome.mp4')">SOGGY FREEDOM</span>
+      <span class="one" onclick="window.open('assets/awesome.mp4')">SOGGY FREEDOM</span>
       <input name="Choice" type="radio">
     </label>
     <label class="option-02">
-      <img class="two" src="https://soggy.cat/2024election/assets/cool.gif" onclick="window.open('https://soggy.cat/2024election/assets/NOOO.mp4')"></img>
+      <img class="two" src="assets/cool.gif" onclick="window.open('assets/NOOO.mp4')"></img>
       <input name="Choice" type="radio">
     </label>
   </div>
