--- a/team/index.html
+++ b/team/index.html
@@ -19,7 +19,7 @@
 	
   </head>
   <body scroll="no" style="overflow: hidden; margin: 0px; padding: 0px;">
-	<script> if (window.location.protocol != "https:") window.location.protocol = "https:" </script>
+	<!-- script> if (window.location.protocol != "https:") window.location.protocol = "https:" </script> -->
 
 	<div class="overlay">
 		<div class="overlay-text" onclick="showContainer()">click me</div>
@@ -152,6 +152,10 @@
 		<p class="fakemarqueetext">"Soggy Cat" is a whimsical term used to describe the comical and often endearing sight of domestic felines that have become wet or damp due to exposure to water, whether through rain, bathing, or other means. While cats are generally known for their aversion to water and meticulous grooming habits, instances of soggy cats can lead to humorous and charming situations. The image of a soggy cat with its fur clinging awkwardly to its body and its usually sleek appearance disrupted by water droplets has become a popular subject in internet memes, social media posts, and humorous artwork. Despite their initial discomfort, many cats display remarkable adaptability, often demonstrating a mix of curiosity and cautious exploration when encountering wet environments. This phenomenon highlights the intriguing and often unpredictable interactions between these enigmatic creatures and the elements of nature. </pre>    
 	</div>
 	
+	<video class="stars" loop autoplay muted playsinline>
+		<source src="assets/images/stars.webm" type="video/webm">
+	</video>
+
 	<img class="dance" src="assets/images/stupidlittlecat.awebp">
 	
 	<div class="snowflakes" aria-hidden="true">
