--- a/team/index.html
+++ b/team/index.html
@@ -154,6 +154,7 @@
 	
 	<video class="stars" loop autoplay muted playsinline>
 		<source src="assets/images/stars.webm" type="video/webm">
+		<source src="assets/images/stars.mp4" type="video/mp4">
 	</video>
 
 	<img class="dance" src="assets/images/stupidlittlecat.awebp">
