--- a/dry/index.html
+++ b/dry/index.html
@@ -21,7 +21,7 @@
 	<!-- don't be fooled, he's not actually soggy here -->
 	<img id="soggycat" src="dry.webp" data-tilt data-tilt-scale="1.05" alt="a picture of a dry cat inside a bathtub."/>
 
-	<div id="sidemenu">
+	<div id="sidemenu" class="sm">
 		<a href="/github" class="menubuttonsa">
 			<div class="menubuttons">
 				<img src='/img/code.svg'>
