--- a/goog/index.html
+++ b/goog/index.html
@@ -35,25 +35,25 @@
 	<script type="module" src="index.js"></script>
 	<div id="googtainer"></div>
 
-	<div id="sidemenu">
-		<a href="/github" class="menubuttonsa">
-			<div class="menubuttons">
-				<img src='//soggy.cat/img/code.svg'>
+	<div id="sidemenu" class="sm sm-closed">
+		<a aria-label="code" href="/github" target="GithubTarget">
+			<div class = "sm-button">
+				<img src='/img/code.svg'>
 				<p>code</p>
 			</div>
 		</a>
 
-		<a href="nocss" class="menubuttonsa">
-			<div class="menubuttons small">
-				<img src='//soggy.cat/img/nocss.svg'>
+		<a aria-label="no css" href="nocss" target="NoCSSTarget">
+			<div class="sm-button sm-small">
+				<img src='/img/nocss.svg'>
 				<p>no css</p>
 			</div>
 		</a>
 
-		<a href="#" class="menubuttonsa"
+		<a aria-label="upload" href="#"
 			onclick="document.getElementById('picker').click(); return false;">
-			<div class="menubuttons small">
-				<img src='//soggy.cat/img/upload.svg'>
+			<div class="sm-button sm-small">
+				<img src='/img/upload.svg'>
 				<p>upload</p>
 			</div>
 		</a>
