--- a/invite/index.html
+++ b/invite/index.html
@@ -25,24 +25,24 @@
 	<script type="module" src="index.js"></script>
 	<div id="googtainer"></div>
 
-	<div id="sidemenu">
-		<a href="/github" class="menubuttonsa">
-			<div class="menubuttons">
+	
+	<div id="sidemenu" class="sm sm-closed">
+		<a aria-label="code" href="/github" target="GithubTarget">
+			<div class="sm-button">
 				<img src='/img/code.svg'>
 				<p>code</p>
 			</div>
 		</a>
 
-
-		<a href="//polyhaven.com/a/warm_bar" target="HDRIAttribution" class="menubuttonsa">
-			<div class="menubuttons small">
+		<a aria-label="HDRI" href="//polyhaven.com/a/warm_bar" target="HDRITarget">
+			<div class="sm-button sm-small">
 				<img src='/img/weirdattribution.svg'>
 				<p>HDRI</p>
 			</div>
 		</a>
 
-		<a href="//redaction.us/" target="TypefaceAttribution" class="menubuttonsa">
-			<div class="menubuttons small">
+		<a aria-label="Typeface" href="//redaction.us/" target="TypefaceTarget">
+			<div class="sm-button sm-small">
 				<img src='/img/weirdattribution.svg'>
 				<p>Typeface</p>
 			</div>
