fix icons on goog. leading to nowhere

--- a/goog/index.html
+++ b/goog/index.html
@@ -38,14 +38,14 @@
 	<div id="sidemenu" class="sm sm-closed">
 		<a aria-label="code" href="/github" target="GithubTarget">
 			<div class = "sm-button">
-				<img src='/img/code.svg'>
+				<img src='//soggy.cat/img/code.svg'>
 				<p>code</p>
 			</div>
 		</a>
 
 		<a aria-label="no css" href="nocss" target="NoCSSTarget">
 			<div class="sm-button sm-small">
-				<img src='/img/nocss.svg'>
+				<img src='//soggy.cat/img/nocss.svg'>
 				<p>no css</p>
 			</div>
 		</a>
@@ -53,7 +53,7 @@
 		<a aria-label="upload" href="#"
 			onclick="document.getElementById('picker').click(); return false;">
 			<div class="sm-button sm-small">
-				<img src='/img/upload.svg'>
+				<img src='//soggy.cat/img/upload.svg'>
 				<p>upload</p>
 			</div>
 		</a>
