other improvements for goog.

--- a/goog/index.html
+++ b/goog/index.html
@@ -26,8 +26,7 @@
 			"imports": {
 				"three": "//soggy.cat/static/threejs/three.module.js",
 				"GLTFLoader": "//soggy.cat/static/threejs/addons/GLTFLoader.js",
-				"DRACOLoader": "//soggy.cat/static/threejs/addons/DRACOLoader.js",
-				"OrbitControls": "//soggy.cat/static/threejs/addons/OrbitControls.js"
+				"DRACOLoader": "//soggy.cat/static/threejs/addons/DRACOLoader.js"
 			}
 		}
 	</script> 
